Bug Fix: Image not scaling on mobile view

--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -12,14 +12,11 @@ Dark green: #28b485
 .banner {
   width: 100%;
   height: 95vh;
-  background-image: linear-gradient(
-      rgba(126, 213, 111, 0.7),
-      rgba(40, 180, 131, 0.7)
-    ),
-    url("../Assets/hero.jpg");
+  background-image: linear-gradient(rgba(126, 213, 111, 0.7), rgba(40, 180, 131, 0.7)), url('../Assets/hero.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: top;
+  background-size: cover;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
